--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
 
     <!-- HEADER -->
 
-    <header></header>
+    <header>
+        
+    </header>
     
     <!-- MAIN -->
 
-    <main></main>
+    <main>
+        <div class="bg-yellow"></div>
+        <div class="bg-blue">
+            <div class="column-light-blue top"></div>
+            <div class="column-light-blue left"></div>
+            <div class="column-light-blue center clearfix"></div>
+            <div class="column-light-blue right"></div>
+        </div>
+    </main>
 
     <!-- FOOTER -->
 
