--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     <!-- MAIN -->
 
     <main>
-        <div class="bg-yellow"></div>
-        <div class="bg-blue">
+        <section class="bg-yellow"></section>
+        <section class="bg-blue">
             <div class="column-light-blue top"></div>
-            <div class="column-light-blue left"></div>
-            <div class="column-light-blue center clearfix"></div>
-            <div class="column-light-blue right"></div>
-        </div>
+            <div class="row clearfix">
+                <div class="column-light-blue left"></div>
+                <div class="column-light-blue center"></div>
+                <div class="column-light-blue right"></div>
+            </div>
+        </section>
     </main>
 
     <!-- FOOTER -->
